# dragonfly-1

./: .gitignore  Cargo.toml  README.md  dat.txt  pne.txt  sim.txt
core/: Makefile  build.sh  dfcore.cpp  funcs.cpp  funcs.h  funcs.hpp  main.cpp  result.h  status.cpp  status.hpp  utils.cpp  utils.h  utils.hpp
data/FilterTransmissionCurves/: 0.8BPF_0deg.csv  0.8BPF_10deg.csv  3.1BPF_0deg.csv  3.1BPF_10deg.csv  model.csv
data/PNeMeasurements/: measure_source_301.txt  measure_source_302.txt  measure_source_303.txt
src/: lib.rs  main.rs  utils.rs
src/calibration/: data_collection.rs  mod.rs  model.rs  transmission.rs
src/core/: expose.rs  mod.rs
src/focuser/: Makefile  birger  birger.c  birger.h  birger_bindings.rs  conv2d.rs  mod.rs
src/sextractor/: dragonfly.param  dragonfly.sex  mod.rs
