[package]
name = "dragonfly-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
clap = "2.33.3"
compute = { git = "https://github.com/al-jshen/compute" }
lexical = "6.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
structopt = "0.3.23"

