[package]
name = "dragonfly"
version = "0.1.0"
edition = "2018"
authors = ["Jeff Shen <jshen2014@hotmail.com>"]
repository = "https://github.com/al-jshen/dragonfly"
description = "Scripts for controlling the Dragonfly Telephoto Array."

[dependencies]
alea = "0.2.2"
arrayvec = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
compute = { git = "https://github.com/al-jshen/compute"} #, features = ["blas"] }
csv = "1.1.6"
fitsio = { git = "https://github.com/mindriot101/rust-fitsio" }
# image2 = { version = "1.0.0", features = ["oiio", "parallel"] }
lazy_static = "1.4.0"
lexical = "6.0.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serialport = "4.0.1"
structopt = "0.3.23"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "calibrate"
path = "bin/calibrate.rs"
